user.css
/* ... */
span.x-toggle-indicatorWrapper {
    background-color: var(--spice-button) !important;
}

/*
-------------------
YOUR LIBRARY X
-------------------
*/

.main-yourLibraryX-entryPoints {
    background: none;
}

/* fix spacing for 'your library' button */
.Wrapper-md-leading {
    margin-inline-end: 20px;
}

/* remove small button hover effects */
.main-yourLibraryX-iconOnly:hover {
    background-color: inherit;
}
.search-searchCategory-carouselButton:hover {
    background-color: inherit;
}

/* remove top-container padding */
.Root__top-container {
    padding: 0 !important;
}
.main-navBar-mainNav {
    padding-top: 25px;
}

/* font size and weight */
span.Type__TypeElement-sc-goli3j-0.TypeElement-balladBold-type {
    font-size: 0.875rem;
    line-height: 1rem;
    font-weight: 700;
}
button.main-yourLibraryX-button {
    font-size: 0.875rem;
    line-height: 1rem;
    font-weight: 700;
}

/* next arrow on ylx type carousel*/
button.search-searchCategory-carouselButton {
    background: none;
}

/* remove ylx box-shadow */
.main-yourLibraryX-isScrolled {
    box-shadow: none;
}

/* remove hover effects on ylx items */
.BoxComponent-group-tinted-isInteractive-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px::after {
    visibility: hidden;
}
.BoxComponent-group-naked-isInteractive-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px::after {
    visibility: hidden;
}
.BoxComponent-group-tinted-isInteractive-hasFocus-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px::after {
    visibility: hidden;
}

/* add ylx item selected gradient effect */
.BoxComponent-group-tinted-isInteractive-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px,
.Box-group-tinted-isInteractive-hasFocus-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px,
.BoxComponent-group-tinted-isInteractive-hasFocus-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px {
    background: linear-gradient(
        90deg,
        transparent 0%,
        rgba(var(--spice-rgb-selected-row), 0.07) 30%,
        rgba(var(--spice-rgb-selected-row), 0.07) 60%,
        transparent 100%
    );
}
/*add ylx filters' color*/
span.ChipInner__ChipInnerComponent-sc-1ly6j4j-0,
button.x-sortBox-sortDropdown,
button.x-filterBox-expandButton,
sortDropdown {
  background-color: #28282860 !important;
}

/* add selected page indicator */
.link-subtle.main-yourLibraryX-navLink::before {
    content: "";
    width: 3px;
    height: 0;
    background-color: var(--spice-text);
    margin-left: -24px;
    position: absolute;
    transition: all 0.2s ease-in-out;
}
.link-subtle.main-yourLibraryX-navLinkActive::before {
    height: 80% !important;
}
.main-yourLibraryX-navLink {
    position: relative;
}

/* add scroll fade to ylx and right sidebar */
.Root__nav-bar [fade="top"],
.Root__right-sidebar [fade="top"] {
    -webkit-mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 1) 20%);
}
.Root__nav-bar [fade="full"],
.Root__right-sidebar[fade="full"] {
    -webkit-mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 1) 80%, transparent 100%);
}

/*
-------------------
RIGHT SIDEBAR
-------------------
*/

/* set transparent background */
.main-nowPlayingView-section {
    background: none;
}
.Root__right-sidebar aside {
    background: none;
}

/* add top padding */
.spotify__os--is-windows .main-buddyFeed-content {
    padding-top: 24px;
}

/* set transparent background for section containers */
.Root__right-sidebar {
    background: linear-gradient(rgba(var(--spice-rgb-sidebar), 0.3) 50%, transparent) !important;
}

/* fix header padding */
.main-buddyFeed-header {
    padding-left: 0 !important;
}

/* now playing view link hovers */
.uvIvZ4XqfEFs88BAPaI8:focus-within,
.uvIvZ4XqfEFs88BAPaI8:hover,
.artist-artistOffers-item:focus-within,
.artist-artistOffers-item:hover,
.main-nowPlayingView-queueItem:focus-within,
.main-nowPlayingView-queueItem:hover {
    background: linear-gradient(
        90deg,
        transparent 0%,
        rgba(var(--spice-rgb-selected-row), 0.07) 30%,
        rgba(var(--spice-rgb-selected-row), 0.07) 60%,
        transparent 100%
    );
}

/*
-------------------
LYRICS PAGE
-------------------
*/

.lyrics-lyrics-container .lyrics-lyrics-adLeaderboardIsEnabled .lyrics-lyrics-coverTopBar {
    --lyrics-color-active: rgb(255, 255, 255);
    --lyrics-color-inactive: rgb(128, 128, 128);
    --lyrics-color-passed: rgb(255, 255, 255);
    --lyrics-color-background: rgb(97, 123, 130);
    --lyrics-color-messaging: rgb(0, 0, 0);
}

/*
-------------------
SPICETIFY EXTENSIONS/APPS
-------------------
*/

/*Lyrics Plus*/
.lyrics-versionSelector select,
.lyrics-Genius-noteTextContainer,
.lyrics-versionSelector option {
  background-color: grey;
}
.lyrics-lyricsContainer-LyricsLine a.fetched {
  background-color: none !important;
  background: none;
  border-bottom: 2px solid grey;
}
.lyrics-lyricsContainer-LyricsLine a:hover {
  border-bottom: none;
}
.lyrics-lyricsContainer-LyricsBackground,
.Ft1cMGlqDsCbqmXQyeKN,
.playlist-item__img.folder {
  background-color: transparent !important;
}

/**/

/*
-------------------
THIRD PARTY EXTENSIONS/APPS
-------------------
*/

/*Section Marker Tweak*/
.section-marker-sections {
  display: none;
}
.section-marker-markers {
  display: block !important; /* So as to never have them hidden, regardless of the bar's width */
}
.section-marker-marker {
  height: 100%; /* For 1.0.0, instead use var(--progress-bar-height) */
  background-color: var(--spice-player);
}

/*Spotify Genre*/
.login-button {
  color: black !important;
}

